# xmahjong

./: .gitignore  Cargo.toml  LEVELS.md  README.md  build.rs  bump_version.ps1  bump_version.sh  extract_tiles.py  package.ps1  package.sh  package_macos.sh  run.ps1  run.sh
.github/workflows/: release-linux-arm64.yml  release-linux.yml  release-macos.yml  release-windows.yml
snap/: snapcraft.yaml
snap/gui/: lmahjong.desktop
snap/local/: launcher.sh
src/: audio.rs  board.rs  game_state.rs  generator.rs  input.rs  levels.rs  lib.rs  logic.rs  main.rs  renderer.rs  storage.rs  timer.rs
tests/: board_properties.rs  generator_properties.rs  logic_properties.rs  renderer_properties.proptest-regressions  renderer_properties.rs  score_properties.rs  shuffle_properties.rs  storage_properties.rs  timer_properties.rs
