[package]
name = "lmahjong"
version = "0.1.1"
edition = "2021"
description = "A Tux-themed Mahjong solitaire game for Linux"
license = "GPL-3.0-or-later"

[dependencies]
sdl2 = { version = "0.37", features = ["image", "mixer", "ttf"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"

[dev-dependencies]
proptest = "1"
