[package]
name = "xmahjong"
version = "0.1.5"
edition = "2021"
description = "A Tux-themed Mahjong solitaire game"
license = "GPL-3.0-or-later"

[dependencies]
sdl2 = { version = "0.37", features = ["image", "mixer", "ttf"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
ureq = "2.9"

[dev-dependencies]
proptest = "1"

# winres embeds the .exe icon and version info on Windows builds only.
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
